--- a/index.html
+++ b/index.html
@@ -26,5 +26,42 @@
       <p>Localizado em Recife - PE</p>
     </div>
   </main>
+
+  <section class="exp" aria-label="Experiência">
+   <h2 class="subtitulo">Experiência</h2>
+   <div>
+    <p class="experiencia-paragrafo">Desenvolvo pequenos projetos como o Robocraft utilizando apenas
+<strong>HTML, CSS e JavaScript.</strong> Para aplicativos web, como a rede social
+Dogs, eu trabalhei no <strong>UX e UI</strong> Design do projeto
+</p>
+     <div class="empresa">
+      <span class="empresa-ano">2017</span>
+      <h3 class="empresa-titulo">Robocraft</h3>
+      <span class="empresa-titulo">Desenvolvedor Junior</span>
+      <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+      <ul class="empresa-habilidades">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>UX Design</li>
+        <li>UI Design</li>
+      </ul>
+     </div>
+
+     <div class="empresa">
+      <span class="empresa-ano">2017</span>
+      <h3 class="empresa-titulo">Robocraft</h3>
+      <span class="empresa-titulo">Desenvolvedor Junior</span>
+      <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+      <ul class="empresa-habilidades">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>UX Design</li>
+        <li>UI Design</li>
+      </ul>
+     </div>
+   </div>
+  </section>
 </body>
 </html>
