--- a/index.html
+++ b/index.html
@@ -28,40 +28,81 @@
   </main>
 
   <section class="exp" aria-label="Experiência">
-   <h2 class="subtitulo">Experiência</h2>
-   <div>
-    <p class="experiencia-paragrafo">Desenvolvo pequenos projetos como o Robocraft utilizando apenas
-<strong>HTML, CSS e JavaScript.</strong> Para aplicativos web, como a rede social
-Dogs, eu trabalhei no <strong>UX e UI</strong> Design do projeto
-</p>
-     <div class="empresa">
-      <span class="empresa-ano">2017</span>
-      <h3 class="empresa-titulo">Robocraft</h3>
-      <span class="empresa-titulo">Desenvolvedor Junior</span>
-      <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
-      <ul class="empresa-habilidades">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>UX Design</li>
-        <li>UI Design</li>
-      </ul>
-     </div>
+    <h2 class="subtitulo">Experiência</h2>
+    <div>
+      <p class="experiencia-paragrafo">Desenvolvo pequenos projetos como o Robocraft utilizando apenas
+        <strong>HTML, CSS e JavaScript.</strong> Para aplicativos web, como a rede social
+        Dogs, eu trabalhei no <strong>UX e UI</strong> Design do projeto
+      </p>
+      <div class="empresa">
+        <span class="empresa-ano">2017</span>
+        <h3 class="empresa-titulo">Robocraft</h3>
+        <span class="empresa-titulo">Desenvolvedor Junior</span>
+        <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
+      </div>
 
-     <div class="empresa">
-      <span class="empresa-ano">2017</span>
-      <h3 class="empresa-titulo">Robocraft</h3>
-      <span class="empresa-titulo">Desenvolvedor Junior</span>
-      <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
-      <ul class="empresa-habilidades">
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>UX Design</li>
-        <li>UI Design</li>
-      </ul>
-     </div>
-   </div>
+      <div class="empresa">
+        <span class="empresa-ano">2017</span>
+        <h3 class="empresa-titulo">Robocraft</h3>
+        <span class="empresa-titulo">Desenvolvedor Junior</span>
+        <p class="empresa-paragrafo">No projeto Robocraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design.</p>
+        <ul class="empresa-habilidades">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>UX Design</li>
+          <li>UI Design</li>
+        </ul>
+      </div>
+    </div>
   </section>
+  <section id="formacao" class="formacao" aria-label="Formação">
+    <div class="formacao-container">
+      <h2 class="subtitulo">Formação</h2>
+      <div>
+        <p class="formacao-paragrafo">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+            <span>Tecnólogo</span>
+            <h3 class="faculdade-curso">Design Digital</h3>
+            <span class="faculdade-instituicao">UFPE</span>
+          </li>
+
+          <li class="faculdade">
+            <span>Tecnólogo</span>
+            <h3 class="faculdade-curso">Design Digital</h3>
+            <span class="faculdade-instituicao">UFPE</span>
+          </li>
+
+          <li class="faculdade">
+            <span>Tecnólogo</span>
+            <h3 class="faculdade-curso">Design Digital</h3>
+            <span class="faculdade-instituicao">UFPE</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer class="rodape" id="contato" aria-Label="Contato">
+    <div class="rodape-container">
+      <p class="rodape-texto">Estou disponível para novos projetos no momento.
+        Entre em contato comigo e marcamos uma
+        conversa</p>
+        <ul>
+          <li class="rodape-contato">xandesantos85@gmail.com</li>
+          <li class="rodape-contato">+55 (85)98544-3816</li>
+          <li class="rodape-contato"><a href="">Instagram: @alexandesh_</a></li>
+        </ul>
+        <p class="rodape-direitos">Alexandre. Alguns direitos reservados</p>
+    </div>
+  </footer>
 </body>
+
 </html>
